@@ -33,23 +33,23 @@ def python_clothify(timg, tdrawable, bx=9, by=9,
     img.add_layer(layer_one, 0)
     pdb.gimp_edit_fill(layer_one, BACKGROUND_FILL)
 
-    pdb.plug_in_noisify(1, img, layer_one, 0, 0.7, 0.7, 0.7, 0.7)
+    pdb.plug_in_noisify(img, layer_one, 0, 0.7, 0.7, 0.7, 0.7)
 
     layer_two = layer_one.copy()
     layer_two.mode = MULTIPLY_MODE
     layer_two.name = "Y Dots"
     img.add_layer(layer_two, 0)
 
-    pdb.plug_in_gauss_rle(1, img, layer_one, bx, 1, 0)
-    pdb.plug_in_gauss_rle(1, img, layer_two, by, 0, 1)
+    pdb.plug_in_gauss_rle(img, layer_one, bx, 1, 0)
+    pdb.plug_in_gauss_rle(img, layer_two, by, 0, 1)
 
     img.flatten()
 
     bump_layer = img.active_layer
 
-    pdb.plug_in_c_astretch(1, img, bump_layer)
-    pdb.plug_in_noisify(1, img, bump_layer, 0, 0.2, 0.2, 0.2, 0.2)
-    pdb.plug_in_bump_map(1, img, tdrawable, bump_layer, azimuth,
+    pdb.plug_in_c_astretch(img, bump_layer)
+    pdb.plug_in_noisify(img, bump_layer, 0, 0.2, 0.2, 0.2, 0.2)
+    pdb.plug_in_bump_map(img, tdrawable, bump_layer, azimuth,
                          elevation, depth, 0, 0, 0, 0, True, False, 0)
 
     gimp.delete(img)
