@@ -37,7 +37,7 @@ def python_foggify(img, layer, name, colour, turbulence, opacity):
     fog.add_mask(mask)
         
     # add some clouds to the layer
-    pdb.plug_in_plasma(1, img, mask, int(time.time()), turbulence)
+    pdb.plug_in_plasma(img, mask, int(time.time()), turbulence)
         
     # apply the clouds to the layer
     fog.remove_mask(MASK_APPLY)
